desktop view of header

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,9 +19,13 @@
     </nav>
   </header>
 
-  <section class="about-me">
+  <div id="background-img">
+    <p>Cool Subtitle here.</p>
+  </div>
+
+  <section class="container">
     <div class="aside">About me</div>
-    <div class="content-1">
+    <div class="content">
       <h2>Hello,welcome to my page. My Name is <span style="color:black">VK YAMINI</span></h2>
       <p></p>
       <p>sdhcfuidhfdfhndfcvdjvndfcjv</p>
@@ -29,10 +33,40 @@
       <p>sdhcfuidhfdfhndfcvdjvndfcjv</p><p>sdhcfuidhfdfhndfcvdjvndfcjv</p>
       <p>VK Yamini</p>
     </div>
-</section>
-<section>
-  
-</section>
+  </section>
+
+<section class="container">
+  <div class="aside">Work</div>
+  <div class="content">
+      <div>
+        <img src="/Users/yamini/Desktop/code/portfolio/myimage.jpg" alt="project-1" id="my-image"/>
+      </div>
+      <div class="boxes">
+        <div>
+          <img src="https://place-hold.it/300" alt="project-1"/>
+        </div>
+        <div>
+          <img src="https://place-hold.it/300" alt="project-1"/>
+        </div>
+        <div>
+          <img src="https://place-hold.it/300" alt="project-1"/>
+        </div>
+        <div>
+          <img src="https://place-hold.it/300" alt="project-1"/>
+        </div>
+      </div>
+   </div>
+  </section>
+
+  <section class="container">
+    <div class="aside">Contact Me</div>
+    <div class="content">
+      <a href="#">About me</a>
+      <a href="#">My Work</a>
+      <a href="#">Contact Me</a>
+      <a href="#">GitHub</a>
+    </div>
+  </section>
   </body>
   </html>
 
