added image and color

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,15 +9,14 @@
   </head>
   <body>
     <header>
-      <br>
       <h1>V.K YAMINI</h1>
       <nav>
-      <a href="#">About me</a>
-      <a href="#">My Work</a>
-      <a href="#">Contact Me</a>
-      <a href="#">GitHub</a>
-    </nav>
-  </header>
+        <a href="#">About me</a>
+        <a href="#">My Work</a>
+        <a href="#">Contact Me</a>
+        <a href="#">GitHub</a>
+      </nav>
+    </header>
 
   <div id="background-img">
     <p>Cool Subtitle here.</p>
@@ -28,11 +27,18 @@
     <div class="content">
       <h2>Hello,welcome to my page. My Name is <span style="color:black">VK YAMINI</span></h2>
       <p></p>
-      <p>sdhcfuidhfdfhndfcvdjvndfcjv</p>
-      <p>sdhcfuidhfdfhndfcvdjvndfcjv</p>
-      <p>sdhcfuidhfdfhndfcvdjvndfcjv</p><p>sdhcfuidhfdfhndfcvdjvndfcjv</p>
-      <p>VK Yamini</p>
-    </div>
+      <p>Hello, Welcome to my page. I am happy to be a part of this Bootcamp.
+      This Bootcamp started on 20,March and it's been a week. So far it is good.Hopefully i will finish the Bootcamp on time</p>
+      <p>I would like to talk about Heartfulness,</p><p>Heartfulness is a major part of my life,i daily meditate and my day starts aftre that
+      <Heartfulness is also called Sahaj Marg at present Kamlesh D Patel is the Global guide and he recently won Padmabhushan award.</p>
+    <p>I am very proud of him ans to be a part of this Organisation</p>
+    <p>i am looking forward to what more i can learn in my LIFE</p>
+   <a href="https://heartfulness.org/en/masterclass/?utm_source=google&utm_medium=cpc&utm_campaign=how_to_meditate&utm_term=learning_to_meditate&gclid=Cj0KCQjw2v-gBhC1ARIsAOQdKY0_C4YRQt8-qFe1OOadGt65p2fcV56khEXcRu8zv7nh0zynTPZOqJsaAl7CEALw_wcB" target="_blank">HEARTFULNEESS<img src="babuji.png" alt="heartfulness logo" id="babuji">meditation</a>
+   <div class="corner">ABOUT ME</div>
+    
+  </div>
+   
+   
   </section>
 
 <section class="container">
