--- a/portfolio.html
+++ b/portfolio.html
@@ -35,21 +35,20 @@
     <p>i am looking forward to what more i can learn in my LIFE</p>
    <a href="https://heartfulness.org/en/masterclass/?utm_source=google&utm_medium=cpc&utm_campaign=how_to_meditate&utm_term=learning_to_meditate&gclid=Cj0KCQjw2v-gBhC1ARIsAOQdKY0_C4YRQt8-qFe1OOadGt65p2fcV56khEXcRu8zv7nh0zynTPZOqJsaAl7CEALw_wcB" target="_blank">HEARTFULNEESS<img src="babuji.png" alt="heartfulness logo" id="babuji">meditation</a>
    <div class="corner">ABOUT ME</div>
-    
-  </div>
-   
-   
+    </div>
   </section>
 
 <section class="container">
   <div class="aside">Work</div>
   <div class="content">
-      <div>
-        <img src="/Users/yamini/Desktop/code/portfolio/myimage.jpg" alt="project-1" id="my-image"/>
+      <div id="work-div">
+        <!-- <img src="/Users/yamini/Desktop/code/portfolio/myimage.jpg" alt="project-1" id="my-image"/> -->
+        <p class="corner text-left">MY-IMAGE</p>
       </div>
       <div class="boxes">
         <div>
           <img src="https://place-hold.it/300" alt="project-1"/>
+          <div class="corner text-left">ABOUT ME</div>
         </div>
         <div>
           <img src="https://place-hold.it/300" alt="project-1"/>
@@ -61,6 +60,7 @@
           <img src="https://place-hold.it/300" alt="project-1"/>
         </div>
       </div>
+      
    </div>
   </section>
 
