--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     </header>
 
   <div id="background-img">
-    <p>Cool Subtitle here.</p>
+    <p id="subtitle">Everything you want to know about YAMINI</p>
   </div>
 
   <section class="container">
@@ -46,19 +46,19 @@
         <p class="corner text-left">MY-IMAGE</p>
       </div>
       <div class="boxes">
-        <div>
-          <img src="https://place-hold.it/300" alt="project-1"/>
-          <div class="corner text-left">ABOUT ME</div>
+        <div class="box-1">
+        <p class="corner text-left">HEARTFULNESS</p>
         </div>
-        <div>
-          <img src="https://place-hold.it/300" alt="project-1"/>
+        <div class="box-1">
+          <p class="corner text-left">GIT HUB</p>
         </div>
-        <div>
-          <img src="https://place-hold.it/300" alt="project-1"/>
+        <div class="box-1">
+         <p class="corner text-left">GMAIL</p>
         </div>
-        <div>
-          <img src="https://place-hold.it/300" alt="project-1"/>
+        <div class="box-1">
+          <p class="corner text-left">WEBSITE</p>
         </div>
+        
       </div>
       
    </div>
@@ -66,7 +66,7 @@
 
   <section class="container">
     <div class="aside">Contact Me</div>
-    <div class="content">
+    <div class="content footer">
       <a href="#">About me</a>
       <a href="#">My Work</a>
       <a href="#">Contact Me</a>
