--- a/portfolio.html
+++ b/portfolio.html
@@ -11,10 +11,10 @@
     <header>
       <h1>V.K YAMINI</h1>
       <nav>
-        <a href="#">About me</a>
-        <a href="#">My Work</a>
-        <a href="#">Contact Me</a>
-        <a href="#">GitHub</a>
+        <a href="#about-me">About me</a>
+        <a href="#my-work">My Work</a>
+        <a href="#my-contacts">Contact Me</a>
+        <a href="https://github.com/vkyamini" target="_blank">GitHub</a>
       </nav>
     </header>
 
@@ -24,27 +24,27 @@
 
   <section class="container">
     <div class="aside">About me</div>
-    <div class="content">
+    <div class="content" id="about-me">
       <h2>Hello,welcome to my page. My Name is <span style="color:black">VK YAMINI</span></h2>
       <p></p>
       <p>Hello, Welcome to my page. I am happy to be a part of this Bootcamp.
       This Bootcamp started on 20,March and it's been a week. So far it is good.Hopefully i will finish the Bootcamp on time</p>
-      <p>I would like to talk about Heartfulness,</p><p>Heartfulness is a major part of my life,i daily meditate and my day starts aftre that
-      <Heartfulness is also called Sahaj Marg at present Kamlesh D Patel is the Global guide and he recently won Padmabhushan award.</p>
+      <p>I would like to talk about Heartfulness,</p><p>Heartfulness is a major part of my life,i daily meditate and my day starts aftre that</p>
+      <p>Heartfulness is also called Sahaj Marg at present Kamlesh D Patel is the Global guide and he recently won Padmabhushan award.</p>
     <p>I am very proud of him ans to be a part of this Organisation</p>
     <p>i am looking forward to what more i can learn in my LIFE</p>
-   <a href="https://heartfulness.org/en/masterclass/?utm_source=google&utm_medium=cpc&utm_campaign=how_to_meditate&utm_term=learning_to_meditate&gclid=Cj0KCQjw2v-gBhC1ARIsAOQdKY0_C4YRQt8-qFe1OOadGt65p2fcV56khEXcRu8zv7nh0zynTPZOqJsaAl7CEALw_wcB" target="_blank">HEARTFULNEESS<img src="babuji.png" alt="heartfulness logo" id="babuji">meditation</a>
+   <img src="myimage.jpg" alt="heartfulness logo" id="babuji">
    <div class="corner">ABOUT ME</div>
     </div>
   </section>
 
 <section class="container">
   <div class="aside">Work</div>
-  <div class="content">
-      <div id="work-div">
+  <div class="content" id="my-work">
+      <a href="https://vkyamini.github.io/horiseon-marketing-website/" target="_blank"><div id="work-div">
         <!-- <img src="/Users/yamini/Desktop/code/portfolio/myimage.jpg" alt="project-1" id="my-image"/> -->
         <p class="corner text-left">MY-IMAGE</p>
-      </div>
+      </div></a>
       <div class="boxes">
         <div class="box-1">
         <p class="corner text-left">HEARTFULNESS</p>
@@ -64,7 +64,7 @@
    </div>
   </section>
 
-  <section class="container">
+  <section class="container" id="my-contacts">
     <div class="aside">Contact Me</div>
     <div class="content footer">
       <a href="#">About me</a>
